@@ -54,3 +54,6 @@ lib/Data/CompactReadonly/V0/TiedArray.pm
 lib/Data/CompactReadonly/V0/TiedDictionary.pm
 t/lib/TestFloat.pm
 t/bug-Number-Phone-1546702248.t
+lib/Data/CompactReadonly/V0/Scalar/Bool/False.pm
+lib/Data/CompactReadonly/V0/Scalar/Bool/True.pm
+lib/Data/CompactReadonly/V0/Scalar/HeaderOnly.pm
