@@ -21,7 +21,7 @@ WriteMakefile(
     'Data::IEEE754'                 => 0, # cant use pack's d> because that uses *native* format
     'Devel::StackTrace'             => 0,
     'File::Temp'                    => 0,
-    'Scalar::Type'                  => '0.1.2',
+    'Scalar::Type'                  => '0.3.1',
     'Scalar::Util'                  => 0,
     'String::Binary::Interpolation' => 0,
     'Test::Differences'             => 0,
