@@ -1,10 +1,10 @@
-package Data::CompactReadonly::V0::Scalar::Null;
+package Data::CompactReadonly::V0::Scalar::Bool::False;
 our $VERSION = '0.0.6';
 
 use warnings;
 use strict;
 use base 'Data::CompactReadonly::V0::Scalar::HeaderOnly';
 
-sub _init { return undef; }
+sub _init { return 1 == 0; }
 
 1;
